<resources>
    <string name="app_name">Crawl</string>
    <string name="hello_world">Hello world! The world works yaaaaay</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_high_scores">HighScores</string>
    <string name="title_activity_end_screen">EndScreen</string>
    <string name="title_activity_bluetooth">Bluetooth</string>
    <string name="title_activity_winner">Winner</string>
    <string name="title_activity_end">End</string>
    <string name="title_activity_set">Set</string>
    <string name="turn1">Turn 1</string>
    <string name="player1">Player 1</string>
    <string name="computer">Computer</string>
    <string name="firstplace">"1st Place:  "</string>
    <string name="secondplace">"2nd Place: "</string>
    <string name="thirdplace">"3rd Place:  "</string>
    <string name="totalgames">"Total Games played: "</string>
    <string name="fastestgame">"Fastest Game played: "</string>
    <string name="host">Host</string>
    <string name="connect">Connect</string>
    <string name="back">Back</string>
    <string name="hotseat">Hotseat</string>
    <string name="oneplayer">1 player</string>
    <string name="twoplayer">2 player</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="player2">Player 2</string>
    <string name="goback">Go back?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="gobackmessage">Are you sure you want to go back? This will take you to the main menu and all the progress of this game will be lost!</string>
    <string name="highscores">HIGH SCORES</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="mainmenu">Main menu</string>
    <string name="continuestring">Continue</string>
    <string name="sunka">Sunka</string>
    <string name="name">Name</string>
    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="title_activity_device_list">DeviceListActivity</string>

</resources>
