<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context="uk.co.ivaylokhr.crawl.Activities.HighScores">

    <Button
        android:layout_width="0dp"
        android:layout_weight="0.07"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:onClick="back"
        android:id="@+id/button4" />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="0.09"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/textView13" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.24"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="0.2"
            android:layout_height="0dp"
            android:text=""
            android:id="@+id/textView14" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="0.14"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/highscores"
            android:id="@+id/textView15" />

         <TextView
            android:layout_width="wrap_content"
             android:layout_weight="0.06"
             android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/firstplace"
            android:id="@+id/textView6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="0.06"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/secondplace"
            android:id="@+id/textView10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="0.11"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/thirdplace"
            android:id="@+id/textView11" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="0.06"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/totalgames"
            android:id="@+id/textView12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="0.06"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/fastestgame"
            android:id="@+id/fastgame" />
    </LinearLayout>

</LinearLayout>
